clang/test/BSC/Negative/Generic/StructAndFunction/redefinition_a_owned_struct/redefinition_a_owned_struct_1.cbs
// RUN: %clang_cc1 %s -verify 

owned struct Vec<T>{};
long times(long x, const Vec<long> *_Borrow v) {     // expected-note{{previous definition is here}}
    long ret = 0;
    Vec<long> x = *v;   // expected-error{{redefinition of 'x' with a different type: 'owned Vec<long>' vs 'long'}}  expected-error{{_Borrow type does not allow move ownership}}

    return x;
}